@@ -5,6 +5,6 @@
 # create and edit the one in /spider/local_cmd/crontab
 # for doing connections and things
 #
-1 0 * * 3 DXUser::export("$main::data/user_asc")
+1 0 * * 3 DXUser::export(localdata("user_asc"))
 5 0 * * * DXDebug::dbgclean()
 0 3 * * * Spot::daily()
