@@ -4,7 +4,7 @@
 #
 #
 my $self = shift;
-my $line = shift || "$main::data/user_asc";
+my $line = shift || localdata("user_asc");
 return (1, $self->msg('e5')) unless $self->priv >= 9;
 
 my ($fn, $flag) = split /\s+/, $line;
