@@ -13,7 +13,7 @@ BEGIN {
   unshift @INC, "$root/local";
 }
 
-use DXVars;
+use SysVar;
 use CmdAlias;
 
 use Carp;
