@@ -23,7 +23,7 @@ BEGIN {
 }
 
 use IO::File;
-use DXVars;
+use SysVar;
 use DXUtil;
 use DXLog;
 
